--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <nav class = "standard">
-        <h1>Yoda Translator</h1>
+        <h1>Banana Speak</h1>
     </nav>
 
     <div id = "container">
         <textarea placeholder="Enter in English" id = "input-text"></textarea>
         <button id="btn">Translate</button>
-        <h3>Output in Yoda's Language will appear down</h3>
+        <h3>Output in Banana Language will appear down</h3>
         <div id="output-text">Waiting for Translation</div>
     </div>
 
     <footer>
         <h2>About this App</h2>
-        <p>Are you a fan of Star Wars? Use the translator to convert your text from English to Yoda's Language.</p>
+        <p>Are you a fan of Minions? Use the translator to convert your text from English to Banana Language.</p>
     </footer>
 
     <script src = "app.js"></script>
